--- a/php/composer.json
+++ b/php/composer.json
@@ -2,7 +2,7 @@
     "name": "emilybache/gilded-rose-refactoring-kata",
     "description": "A kata to practice refactoring, tests and polymorphism",
     "require": {
-        "php": "^7.2"
+        "php": "^7.3"
     },
     "autoload": {
         "psr-4": {
@@ -15,7 +15,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^9.0",
         "phpstan/phpstan": "^0.12.23",
         "phpstan/phpstan-phpunit": "^0.12.8",
         "symplify/easy-coding-standard": "^7.3",
@@ -23,8 +23,8 @@
         "approvals/approval-tests": "^1.4"
     },
     "scripts": {
-        "checkcode": "phpcs src tests --standard=PSR12",
-        "fixcode": "phpcbf src tests --standard=PSR12",
+        "checkcode": "phpcs src tests",
+        "fixcode": "phpcbf src tests",
         "test": "phpunit",
         "tests": "phpunit",
         "test-coverage": "phpunit --coverage-html build/coverage",
